# src/main/java/se/digg/wallet/gateway/domain/model/account/Account.java
@@ -1,0 +1,18 @@
+// SPDX-FileCopyrightText: 2026 Digg - Agency for Digital Government
+//
+// SPDX-License-Identifier: EUPL-1.2
+
+package se.digg.wallet.gateway.domain.model.account;
+
+import java.util.UUID;
+
+import io.soabase.recordbuilder.core.RecordBuilder;
+
+@RecordBuilder
+public record Account(
+    UUID id,
+    String personalIdentityNumber,
+    String emailAdress,
+    String telephoneNumber,
+    Jwk deviceKey) {
+}
